# Course_Work_5

./: README.md  config.py  db_manager.py  hh_engine_class.py  main.py  pyproject.toml  queries.sql  utils.py
